Some other changes and added footer in prescrtion activity